# BornAgainReflectometryComparison

./: README.md  ReflectometryParameterExploration.ipynb
AFluidFloatingBilayer-ReproducingResults/: Co-refinement_in_BornAgain-Copy1.ipynb  Co-refinement_in_BornAgain.ipynb  LipidBilayerUtils.py
DataToFit/: FitByRefnx_d2o.txt
LipidBilayerSimulation-Refnx-BA/: Co-refinement_in_BornAgain.ipynb  FitByRefnx_h2o.txt  FitByRefnx_hdmix.txt  LipidBilayerModel.ipynb  LipidBilayerUtils.py  ReproducingRefnxFitting.py  Roughness_gives_discrepancy.ipynb  Towards_the_Lipid_Bilayer_Model.ipynb  lipid.py
PerformanceTests/: BornAgain_Performance_Analysis.ipynb  Extracting_Refnx_Engine.ipynb  Reusing_an_already_performing_engine.ipynb
PerformanceTests/Reflectawesometry/: CMakeLists.txt
PerformanceTests/Reflectawesometry/lib/: CMakeLists.txt  Reflectawesometry.h  Reflectawesometry.i  Reflectawesometry.py  Reflectawesometry_wrap.cxx
PerformanceTests/Reflectawesometry/src/: CMakeLists.txt  main.cpp
RoughnessInconsistency/: BornAgainInconsistency.py  RefnxInconsistency.py
SimulationOverview-BA-GenX-Refnx-Refl1d/: BornAgainSoftwareIntercomparison-Simulation.ipynb
